Changed of layout and colors

--- a/code/index.html
+++ b/code/index.html
@@ -4,46 +4,71 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <header class="header">
-      <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <h1 class="top-heading">Tech News</h1>
-      <img class="logo" src="./logo.svg" alt="Technigo logo">
-      <nav class="navigation-container">
-        <a class="navigation-item" href="#">NEWS</a>
-        <a class="navigation-item" href="#">TECH</a>
-        <a class="navigation-item" href="#">ABOUT</a>
-      </nav>
-    </header>
+      <header class="header">
+        <div class="hamburger">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <h1 class="top-heading">Daily Hacker</h1>
+        <img class="logo" src="./logo.svg" alt="Technigo logo">
+        <nav class="navigation-container">
+          <a class="navigation-item" href="#">Top News</a>
+          <a class="navigation-item" href="#">Latest News</a>
+          <a class="navigation-item" href="#">Industry</a>
+          <a class="navigation-item" href="#">Navigate</a>
 
-    <section class="big-news">
-      <div class="news-card-big"></div>
+        </nav>
+      </header>
 
-        <!-- <img src="/top_new.jpg">
-        <h2>10 promising pet startups that are keeping pets and pet lovers happy during the pandemic</h2> -->
-    </section>
+      <section class="big-news">
+        <div class="news-card-big">
+          <img class="news-card-pic-big" src="/top_new.jpg" alt="Picture of a computer">
+          <p class="big-news-text">The World's 50 Most Innovative Companies of 2021"</p2> 
+        </div>
+      </section>
 
     <h2>Top news</h2>
     <section class="other-news">
-      <div class="news-card"></div>
-      <div class="news-card"></div>
-      <div class="news-card"></div>
-      <div class="news-card"></div>
+      <div class="news-card-type">
+        
+      </div>
+      <div class="news-card">
+        <img class="news-card-pic" src="/robot.jpg" alt="Picture of a robot">
+        <p class="news-card-text">Some text about the news article</p>
+      </div>
+      <div class="news-card">
+        <img class="news-card-pic" src="/tech_pic.jpg" alt="Picture of a computers">
+        <p class="news-card-text">Some text about the news article</p>
+      </div>
+        <div class="news-card">
+        <img class="news-card-pic" src="/watch_pic.jpg" alt="Picture of a watch">
+        <p class="news-card-text">Some text about the news article</p>
+      </div>
     </section>
 
-      <h2>Latest</h2>
-      <section class="other-news">
-        <div class="news-card"></div>
-        <div class="news-card"></div>
-        <div class="news-card"></div>
-        <div class="news-card"></div>  
+    <h2>Latest</h2>
+    <section class="other-news">
+      <div class="news-card-type">
 
+      </div>
+      <div class="news-card">
+          <img class="news-card-pic" src="/pet_photo.jpg" alt="Picture of a man and a dog">
+          <p class="news-card-text">Some text about the news article</p>
+      </div>
+      <div class="news-card">
+        <img class="news-card-pic" src="/instagram.jpg" alt="Picture of a man and a dog">
+        <p class="news-card-text">Some text about the news article</p>
+      </div>
+      <div class="news-card">
+        <img class="news-card-pic" src="/uber.jpg" alt="Picture of a man and a dog">
+        <p class="news-card-text">Some text about the news article</p>
+      </div>
     </section>
   </body>
 </html>
