--- a/code/index.html
+++ b/code/index.html
@@ -7,16 +7,47 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header><!-- Some kind of logo and navbar -->
+      <nav>
+        <img class="logo" src="Smiley.png" alt=smiley>
+        <h1>The upBeat</h1>
+        <a href="/html/">Start</a>
+        <a href="/css/">Today</a>
+        <a href="/js/">Random</a>
+        <a href="/python/">Contact</a>
+      </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class=newssite>
+      <section class="big-news"> <!-- The big news content --> 
+        <article>
+            <h2>The world hasn't ended!</h2>
+            <p>At least we have that going for us. 
+              <br>Here we offer a respite from the news of darkness and despair and offer upBeat and calming news</p>
+        </article>    
+      </section>
 
-    <section class="">
-      <!-- The other news  -->
+      <section class="small-news"><!-- The other news  -->
+        <article class=smallstory1> 
+          <h4>The world already has ended!</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis molestiae enim iusto ea quia mollitia labore est corrupti itaque odio nobis? Tenetur deserunt blanditiis quis voluptatibus!</p>
+        </article>   
+
+        <article class=smallstory2> 
+          <h4>The world already has ended!</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis molestiae enim iusto ea quia mollitia labore est corrupti itaque odio nobis? Tenetur deserunt blanditiis quis voluptatibus!</p>
+        </article> 
+
+        <article class=smallstory3> 
+          <h4>The world already has ended!</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis molestiae enim iusto ea quia mollitia labore est corrupti itaque odio nobis? Tenetur deserunt blanditiis quis voluptatibus!</p>
+        </article> 
+
+        <article class=smallstory4> 
+          <h4>The world already has ended!</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit alias dignissimos, repellendus perferendis molestiae enim iusto ea quia mollitia labore est corrupti itaque odio nobis? Tenetur deserunt blanditiis quis voluptatibus!</p>
+        </article> 
+      </section>
     </section>
   </body>
 </html>
