Something is broken with the navigation container

--- a/code/index.html
+++ b/code/index.html
@@ -16,13 +16,13 @@
 
   <body>
     
-    <header>
+    <header class="header container">
       <div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
       </div>
-      <div class="header-imgs">
+      <div>
         <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
         <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
       </div>      
