add popular news section

--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,12 @@
         <img class="logo" src="./news.svg" alt="logo">
       </div>
       <div class="navigation-container">
-        <div class="nav-item">Articles</div>
-        <div class="nav-item">Magazine</div>
+        <a class="nav-item" href="#">Good news</a>
+        <a class="nav-item" href="#">Good talks</a>
       </div>
       <div class="navigation-container">
-        <div class="nav-item">About</div>
-        <div class="nav-item">Contact</div>
+        <a class="nav-item" href="#">About us</a>
+        <a class="nav-item" href="#">Contact</a>
       </div>
     </nav>
   </header>
@@ -47,23 +47,55 @@
             <img class="img" src="./energy.jpg" alt="">
             <h2>More Renewable Energy Used in 2020 Than Fossil Fuels For the First Time in World’s 4th Largest Economy
             </h2>
-            <p>World - Jan 18, 2021</p>
+            <p>WORLD - Jan 18, 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./walking.jpg" alt="">
             <h2>Just Go Walk: Studies Show Normal Walking Can Add Years to Your Life and Reduce Disease Symptoms</h2>
-            <p>Health - Jan 18, 2021</p>
+            <p>HEALTH - Jan 18, 2021</p>
+          </div>
+          <div class="news-card">
+            <img class="img" src="./irland.jpg" alt="">
+            <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
+            <p>LEUSURE - Jan 15, 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./turtle.jpg" alt="">
             <h2>The Last Known Swinhoe’s Turtle on Earth Was Alone Until This Female Was Found – Researchers Hope for
               Babies</h2>
-            <p>Animals - Jan 16, 2021</p>
+            <p>ANIMALS - Jan 16, 2021</p>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- smal news section -->
+    <section class="smal-news-container">
+      <div>
+        <div class="smal-news-heading">
+          <h1>Popular news</h1>
+        </div>
+        <div class="news-card-container">
+          <div class="news-card">
+            <img class="img" src="./car.jpg" alt="">
+            <h2>New Electric Car Batteries Can Fully-Charge in 5 Minutes, Like Filling Your Car With Gas, If Better Chargers Are in Place
+            </h2>
+            <p>BUSINESS - Jan 18, 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./irland.jpg" alt="">
-            <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
-            <p>Leisure - Jan 15, 2021</p>
+            <img class="img" src="./snow.jpg" alt="">
+            <h2>The Mind-Blowing Mathematics of Snowflakes</h2>
+            <p>SCIENCE - Jan 18, 2021</p>
+          </div>
+          <div class="news-card">
+            <img class="img" src="./gaming.jpg" alt="">
+            <h2>Study During Lockdown Shows Video Gaming –Even For Hours– Can Help Your Mental Health</h2>
+            <p>LEISURE - Jan 15, 2021</p>
+          </div>
+          <div class="news-card">
+            <img class="img" src="./space.jpg" alt="">
+            <h2>There Are 300 Million Potentially Habitable Planets in the Milky Way, NASA Reports</h2>
+            <p>SCIENCE - Jan 16, 2021</p>
           </div>
         </div>
       </div>
