beautified css and html file

--- a/code/index.html
+++ b/code/index.html
@@ -89,29 +89,28 @@
 
 
        <section class ="Texttwo">
-    <div class= "container2">
-    <container class="imagetwo"><img src="books.png"></container>
+    <div class= "containertwo">
+    <div class="imagetwo"><img src="books.png"></div>
     <div class="news-cardfour"><b><p>Book Club</p></b><p>Despite its 'hybrid' approach the Met's catalogue on French
       painting lacks detailed analysis</p> </div>
        </div>
 
-    <div class= "container2">
-    <container class="imagetwo"><img src="books1.png"></container>
+    <div class= "containertwo">
+    <div class="imagetwo"><img src="books1.png"></div>
     <div class="news-cardfour"><b><p>Book Club</p></b><p>Book on Bellini proves more truth and false</p> </div>
 
   </div>
 
-  <div class="container2">
+  <div class="containertwo">
 
-  <container class="imagetwo"><img src="books2.png"></container>
+  <div class="imagetwo"><img src="books2.png"></div>
   <div class="news-cardfour"><b><p>Exhibition</p></b>
     <p>The case is made for connoisseurs and their role in art history</p> </div>
-  </div>
 
   </div>
 
-  <div class="container2">
-  <container class="imagetwotwo"><img src="books4.png"></container>
+  <div class="containertwo">
+  <div class="imagetwotwo"><img src="books4.png"></div>
   <div class="news-cardfour"><b><p>Book Club</p></b><p>Learn the techniques with Tom Browning</p> </div>
 
 
