--- a/code/index.html
+++ b/code/index.html
@@ -31,6 +31,8 @@
   </div>
   </section>
 
+  <div class="dots"></div>
+
   <section class="news-card-section">  
     <div class="news-card">
       <img src="images/photo.jpg" alt="">
@@ -55,6 +57,10 @@
       <h2>Greece Travel Info & Tips: All you need to know</h2>
     </div>
   </section>
+
+  <footer>
+    <p>Author: Laima Duhovnaja</p>
+  </footer>
   
 </body>
 </html>
