added pictures in small-news article and put a width to them

--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
        
       <article class="small-news">
         <h3>Rubrik</h3>
-        <img src="bildlänk" alt="Bild" width="">
+        <img src="./Taj-mahal.jpg" alt="Picture of Taj-mahal" width="">
       </article>
 
       <article class="small-news">
