change styling and media queries

--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css" />
-  <title>Fitness trends for 2021</title>
+  <title>Fitness News</title>
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
@@ -15,13 +15,13 @@
 
     <img class="logo" src="./logo.svg" alt="Technigo logo" />
 
-    <h1>LATEST NEWS IN FITNESS INDUSTRY</h1>
+    <h1>FITNESS NEWS</h1>
 
     <nav class="navigation-container">
-      <div class="navigation-item"><a href="#">Home</a></div>
-      <div class="navigation-item"><a href="#">Main News</a></div>
-      <div class="navigation-item"><a href="#">Other News</a></div>
-      <div class="navigation-item"><a href="#">Home</a></div>
+      <div class="navigation-item"><a href="#">HOME</a></div>
+      <div class="navigation-item"><a href="#">BIG NEWS</a></div>
+      <div class="navigation-item"><a href="#">OTHER NEWS</a></div>
+      <div class="navigation-item"><a href="#">ABOUT</a></div>
     </nav>
 
   </header>
@@ -46,52 +46,71 @@
       <div class="news-card">
         <img src="./onlinetraining.jpg" alt="Online training image" />
         <h3>Online training</h3>
+        <p>Some text</p>
         <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./wearable.jpg" alt="" />
         <h3>Wearable technology</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./pushup.jpg" alt="" />
         <h3>Body weight training</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./skiing.jpg" alt="" />
         <h3>Outdoor activities</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./hiit.jpg" alt="" />
         <h3>High intensity interval training</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./virtual.jpg" alt="" />
         <h3>Virtual training</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./exercisemedicine.jpg" alt="" />
         <h3>Exercise is medicine</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./freeweights.jpg" alt="" />
         <h3>Training with free weights</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./older.jpg" alt="" />
         <h3>Fitness programs for older adults</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
       <div class="news-card">
         <img src="./personaltraining.jpg" alt="" />
         <h3>Personal training</h3>
+        <p>Some text</p>
+        <a href="#">Read more</a>
       </div>
 
     </section>
