--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,12 @@
         <img class="logo" src="./news.svg" alt="logo">
       </div>
       <div class="navigation-container">
-        <a class="nav-item" href="#">Good news</a>
-        <a class="nav-item" href="#">Good talks</a>
+        <a class="nav-item" href="#">GOOD NEWS</a>
+        <a class="nav-item" href="#">GOOD TALKS</a>
       </div>
       <div class="navigation-container">
-        <a class="nav-item" href="#">About us</a>
-        <a class="nav-item" href="#">Contact</a>
+        <a class="nav-item" href="#">ABOUT US</a>
+        <a class="nav-item" href="#">CONTACT</a>
       </div>
     </nav>
   </header>
@@ -32,8 +32,9 @@
         <img class="img" src="./snake.jpg" alt="snake">
       </div>
       <div class="big-news-text">
+        <p>ANIMALS, 20 JAN 2021</p>
         <h1>Top 10 Species Discovered in 2020 Include a Harry Potter Snake and Desert-Dwelling Broccoli</h1>
-        <button class="button">Read more</button>
+        <button class="button">READ MORE</button>
       </div>
     </section>
     <!-- smal news section -->
@@ -47,23 +48,23 @@
             <img class="img" src="./energy.jpg" alt="">
             <h2>More Renewable Energy Used in 2020 Than Fossil Fuels For the First Time in World’s 4th Largest Economy
             </h2>
-            <p>WORLD - Jan 18, 2021</p>
+            <p>WORLD, JAN 18 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./walking.jpg" alt="">
             <h2>Just Go Walk: Studies Show Normal Walking Can Add Years to Your Life and Reduce Disease Symptoms</h2>
-            <p>HEALTH - Jan 18, 2021</p>
+            <p>HEALTH, JAN 18, 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./irland.jpg" alt="">
             <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
-            <p>LEUSURE - Jan 15, 2021</p>
+            <p>LEUSURE JAN 15 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./turtle.jpg" alt="">
             <h2>The Last Known Swinhoe’s Turtle on Earth Was Alone Until This Female Was Found – Researchers Hope for
               Babies</h2>
-            <p>ANIMALS - Jan 16, 2021</p>
+            <p>ANIMALS, JAN 16 2021</p>
           </div>
           
         </div>
@@ -80,22 +81,22 @@
             <img class="img" src="./car.jpg" alt="">
             <h2>New Electric Car Batteries Can Fully-Charge in 5 Minutes, Like Filling Your Car With Gas, If Better Chargers Are in Place
             </h2>
-            <p>BUSINESS - Jan 18, 2021</p>
+            <p>BUSINESS, JAN 10 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./snow.jpg" alt="">
             <h2>The Mind-Blowing Mathematics of Snowflakes</h2>
-            <p>SCIENCE - Jan 18, 2021</p>
+            <p>SCIENCE, JAN 11 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./gaming.jpg" alt="">
             <h2>Study During Lockdown Shows Video Gaming –Even For Hours– Can Help Your Mental Health</h2>
-            <p>LEISURE - Jan 15, 2021</p>
+            <p>LEISURE, DEC 17 2020</p>
           </div>
           <div class="news-card">
             <img class="img" src="./space.jpg" alt="">
             <h2>There Are 300 Million Potentially Habitable Planets in the Milky Way, NASA Reports</h2>
-            <p>SCIENCE - Jan 16, 2021</p>
+            <p>SCIENCE, DEC 27 2020</p>
           </div>
         </div>
       </div>
