Layout for news cards and images

--- a/code/index.html
+++ b/code/index.html
@@ -16,14 +16,14 @@
         <!--Navigation bar and logo-->
         <header>
 
-            <label class="logo">Jokes Aside</label>
+            <label class="logo">Winter NEWS</label>
 
             <nav>
-                <a href="#">Politics</a>
-                <a href="#">Business</a>
-                <a href="#">Culture</a>
-                <a href="#">Lifestyle</a>
-                <a href="#">Technologies</a>
+                <a class="navigation-element" href="#">Home</a>
+                <a class="navigation-element" href="#">Technologies</a>
+                <a class="navigation-element" href="#">Culture</a>
+                <a class="navigation-element" href="#">Lifestyle</a>
+                <a class="navigation-element" href="#">More winter</a>
             </nav>
 
             <div class="hamburger-menu-img-container">
@@ -44,17 +44,39 @@
         <!--Big news section-->
 
         <section class="big-news-container">
-            <div class="big-news-article-1">
+            <div class="big-news-card">
                 <article>
-                    <h1>First big news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                    <img class="news-image" src="./images/big-news-1.jpg" alt="News related image">
+                    <div class="news-text">
+                        <h1>First big news</h1>
+                    </div>
                 </article>
             </div>
 
-            <div class="big-news-article-2">
+            <div class="big-news-card">
                 <article>
-                    <h1>Seconds big news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
+                    <img class="news-image" src="./images/big-news-2.jpg" alt="News related image">
+                    <div class="news-text">
+                        <h1>First big news</h1>
+                    </div>
+                </article>
+            </div>
+
+            <div class="big-news-card">
+                <article>
+                    <img class="news-image" src="./images/big-news-3.jpg" alt="News related image">
+                    <div class="news-text">
+                        <h1>First big news</h1>
+                    </div>
+                </article>
+            </div>
+
+            <div class="big-news-card">
+                <article>
+                    <img class="news-image" src="./images/big-news-4.jpg" alt="News related image">
+                    <div class="news-text">
+                        <h1>First big news</h1>
+                    </div>
                 </article>
             </div>
         </section>
@@ -62,46 +84,46 @@
         <!--Sub-news section-->
 
         <section class="sub-news-container">
-            <div class="sub-news-article-1">
-                <article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-1.jpg" alt="News related image">
+                <div class="news-text">
                     <h1>First sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+                </div>
             </div>
 
-            <div class="sub-news-article-2">
-                <article>
-                    <h1>Second sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-2.jpg" alt="News related image">
+                <div class="news-text">
+                    <h1>First sub news</h1>
+                </div>
             </div>
 
-            <div class="sub-news-article-3">
-                <article>
-                    <h1>Third sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-3.jpg" alt="News related image">
+                <div class="news-text">
+                    <h1>First sub news</h1>
+                </div>
             </div>
 
-            <div class="sub-news-article-4">
-                <article>
-                    <h1>Fourth sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-4.jpg" alt="News related image">
+                <div class="news-text">
+                    <h1>First sub news</h1>
+                </div>
             </div>
 
-            <div class="sub-news-article-5">
-                <article>
-                    <h1>Fifth sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-5.jpg" alt="News related image">
+                <div class="news-text">
+                    <h1>First sub news</h1>
+                </div>
             </div>
 
-            <div class="sub-news-article-6">
-                <article>
-                    <h1>Sixth sub news</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat necessitatibus, consequuntur, eum alias veritatis tempore cupiditate, unde laborum nulla animi optio aperiam assumenda tenetur temporibus omnis excepturi neque vero incidunt.</p>
-                </article>
+            <div class="sub-news-card">
+                <img class="news-image" src="./images/sub-news-7.jpg" alt="News related image">
+                <div class="news-text">
+                    <h1>First sub news</h1>
+                </div>
             </div>
         </section>
 
