Added arrow at bottom of page, changed padding on .big-news, changed sub-heading in big news from h3 to h4

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link rel='icon' href='favicon.ico' type='image/x-icon'/>
+    <script src="https://kit.fontawesome.com/025421cb6e.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -42,12 +43,12 @@
       </div>
       <div>
         <h2>Extreme weather</h2>
-        <h3>- a historical perspective and the latest research</h4>
+        <h4>- a historical perspective and the latest research</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nihil provident ex perspiciatis! Provident qui minima, earum debitis rerum, repellendus voluptates veniam veritatis corrupti recusandae eius similique voluptas? Quod, nihil.</p>
         <p>Quibusdam illo placeat minus necessitatibus qui voluptatibus odio mollitia expedita voluptatem suscipit vel ex nulla aliquid, molestias inventore corrupti rerum rem dolores?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, inventore similique!</p>
         <br>
-        <a href="#"><p>Read the story &#8594;</a>
+        <a href="#">Read the story &#8594;</a>
       </div>
     </section>
 
@@ -84,6 +85,10 @@
         <a href="#"><h3>Smaller heading</h3></a>
       </div>
     </section>
+
+    <div class ="arrow-up">
+      <a href="#top"><i class="fas fa-chevron-up"></i></a>
+    </div>
 
     <footer>
       <p>&copy; Julia Ros 2021</p>
