--- a/code/index.html
+++ b/code/index.html
@@ -30,12 +30,15 @@
   <section class="big-news">
     <img src="tea0.jpg" alt="">
     <div class="big-news-text">
-      <h2>Big news headline</h2>
+      <h2>Green Tea Among Top Wellness Habits as Result of COVID-19</h2>
       <article>
-        <p>Read more...</p>
+        <p><a href="#"> Read more...</a></p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae eaque sint laboriosam corporis, cumque
           quae consequatur possimus blanditiis, harum odit tempore. Odit beatae dignissimos exercitationem numquam quas
           velit omnis expedita.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure laborum perspiciatis illum consequatur dicta,
+          ullam suscipit! Omnis ipsa asperiores ab laborum eius excepturi tempore libero porro totam neque. Nemo, id.
+        </p>
       </article>
     </div>
   </section>
@@ -43,35 +46,35 @@
   <section class="small-news">
     <div>
       <img src="tea1.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>5 Flavor & Trend Predictions for 2021</h3>
     </div>
     <div>
       <img src="tea2.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>Celebrate! January Is National Hot Tea Month</h3>
     </div>
     <div>
       <img src="tea3.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>Tea Experts Discuss the Most Important Industry Issues</h3>
     </div>
     <div>
       <img src="tea4.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>Hope, Inspiration & Connection: How a Small Tea Business Can Shine</h3>
     </div>
     <div>
       <img src="tea5.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>The Tea Council of the USA Launches 5th Annual Photo-Sharing Campaign</h3>
     </div>
     <div>
       <img src="tea6.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>Chanoyu, a Japanese Matcha Tea Ceremony</h3>
     </div>
     <div>
       <img src="tea7.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>How Starting a Tea Ritual Can Encourage Mindfulness and Elevate One’s Self-Care Routine</h3>
     </div>
     <div>
       <img src="tea8.jpg" alt="">
-      <h3>Small news headline</h3>
+      <h3>5 Tea Gifts for Valentine’s Day</h3>
     </div>
   </section>
   <footer>
