--- a/code/index.html
+++ b/code/index.html
@@ -47,7 +47,7 @@
 
   <section class="small-news">
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
+      <img src="./assets/Norge.jpg" alt="Photo of a">
       <p>Some image text</p>
     </a>
     <a href="#">
