Added some img. and did alot of changes to the css regarding image, size, justify-c, align-items

--- a/code/index.html
+++ b/code/index.html
@@ -51,11 +51,11 @@
       <p>Some image text</p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
+      <img src="./assets/Rumänien.jpg" alt="Photo of a">
       <p>Some image text</p>
     </a>
     <a href="#">
-      <img src="./assets/logo.svg" alt="Photo of a">
+      <img src="./assets/trappsteg.jpg" alt="Photo of a">
       <p>Some image text</p>
     </a>
     <a href="#">
