add test changes

--- a/code/index.html
+++ b/code/index.html
@@ -5,21 +5,24 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header class="header">
       <div class="introduction">
       <!-- Some kind of logo and navbar -->
       <!--image class ?-->
-        <img src="./logo.svg" alt="Techigo's logo">
+        <img class="logo" src="./logo.svg">
       </div>
       <div class="navbar">
-        <nav> <!--här kan man skriva divs istället-->
-          <a href="/html/">Home</a>
-          <a href="/html/">News</a>
-          <a href="/html/">Stories</a>
-          <a href="/html/">Contact</a>
+        <nav class="navigation"> <!--här kan man skriva divs istället-->
+          <div class="Home">
+            <p>Home</p>
+          <div class="News">
+            <p>News</p>
+          <div class="Stories">
+            <p>Stories</p>
+          <div class="Contact">
+            <p>Contact</p>
         </nav>
       </div>  
     </header>
