Updated Interview Section with updated font sizes and images

--- a/code/index.html
+++ b/code/index.html
@@ -91,11 +91,10 @@
         <!-- INTERVIEW SECTION -->     
       <section class="interview">
         <a href="#">
-        <h1 class="interview-headline">INTERVJU.</h1>
-        <img class="interview-img" src="images/interview-img.jpg" />
+        <h1 class="interview-headline">INTERVIEW.</h1>
+        <img class="interview-img" src="Images/free-britney.png" />
         <h2 class="interview-quote">
-          Jireel: ”Jag har känt att jag måste vara där när min pappa inte är
-          det”
+          Britney about her comeback as a free artist:<br> ”Without the #FreeBritney campaign it would not have been possible”
         </h2>
       </a>
       </section>
