--- a/code/index.html
+++ b/code/index.html
@@ -28,20 +28,20 @@
           <input type="text" placeholder="Search..">
         </div>
         <label for="searchbox">
-          <img class="search-button" src="../pictures/magnify.png">
+          <img class="search-button" src="./pictures/magnify.png">
         </label>
     </nav>
     <!-- meteor animation -->
     <div class="meteor"></div>
     <!-- logo, normal and simpler version for mobile devices-->
-    <div class="logo"><img src="../pictures/logo_space.svg"></div>
-    <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
+    <div class="logo"><img src="./pictures/logo_space.svg"></div>
+    <div class="logo-simple"><img src="./pictures/logo_space_simple.svg"></div>
   </header>
 
   <!--Top news, the most important news. Take up big space and top of the content-->
   <section class="big-news">
     <container class="big-img-container">
-      <img src="../pictures/astronaut.jpg">
+      <img src="./pictures/astronaut.jpg">
     </container>
     <container class="big-text-container">
       <h2>TOP NEWS</h2>
@@ -59,7 +59,7 @@
   <section class="small-news">
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/SLSmegarocket.jpg">
+        <img src="./pictures/SLSmegarocket.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -70,7 +70,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/WilliamThornton.jpg">
+        <img src="./pictures/WilliamThornton.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -81,7 +81,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/nicholaspatrick.jpg">
+        <img src="./pictures/nicholaspatrick.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -93,7 +93,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/shuttle.jpg">
+        <img src="./pictures/shuttle.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -104,7 +104,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/spiral.jpg">
+        <img src="./pictures/spiral.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -115,7 +115,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/tracycaldwell.jpg">
+        <img src="./pictures/tracycaldwell.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -126,7 +126,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/SLSmegarocket.jpg">
+        <img src="./pictures/SLSmegarocket.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -137,7 +137,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/WilliamThornton.jpg">
+        <img src="./pictures/WilliamThornton.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -148,7 +148,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/sun.jpg">
+        <img src="./pictures/sun.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -160,7 +160,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/nicholaspatrick.jpg">
+        <img src="./pictures/nicholaspatrick.jpg">
       </container>
     </div>
     <div class="grid-wrapper">
@@ -171,7 +171,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/ISS640px.jpg">
+        <img src="./pictures/ISS640px.jpg">
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
@@ -181,7 +181,7 @@
     </div>
     <div class="grid-wrapper">
       <container class="small-img-container">
-        <img src="../pictures/columbia.jpg">
+        <img src="./pictures/columbia.jpg">
     </div>
     <div class="grid-wrapper">
       <h3>Small news</h3>
@@ -196,7 +196,7 @@
     <div class="footer-wrapper">
       <p>&copy; Pauline Andersson 2021</p>
       <container class="footer-img-container">
-        <img src="../pictures/logo.svg">
+        <img src="./pictures/logo.svg">
         </contaier>
     </div>
   </footer>
