--- a/code/contacts.html
+++ b/code/contacts.html
@@ -20,15 +20,15 @@
             <a href="login.html" target="blank">login</a>
         </div>
     </nav>
-    <div class="logo"><img src="../pictures/logo_space.svg"></div>
-    <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
+    <div class="logo"><img src="./pictures/logo_space.svg"></div>
+    <div class="logo-simple"><img src="./pictures/logo_space_simple.svg"></div>
 </header>
 
 <footer class="footer">
     <div class="footer-wrapper">
         <p>&copy; Pauline Andersson 2021</p>
         <container class="footer-img-container">
-            <img src="../pictures/logo.svg">
+            <img src="./pictures/logo.svg">
             </contaier>
     </div>
 </footer>
