--- a/code/login.html
+++ b/code/login.html
@@ -20,8 +20,8 @@
       <a href="signup.html" target="blank">sign up</a>
     </div>
   </nav>
-  <div class="logo"><img src="../pictures/logo_space.svg"></div>
-  <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
+  <div class="logo"><img src="./pictures/logo_space.svg"></div>
+  <div class="logo-simple"><img src="./pictures/logo_space_simple.svg"></div>
 </header>
 
 <section class="form-section">
@@ -41,7 +41,7 @@
   <div class="footer-wrapper">
     <p>&copy; Pauline Andersson 2021</p>
     <container class="footer-img-container">
-      <img src="../pictures/logo.svg">
+      <img src="./pictures/logo.svg">
       </contaier>
   </div>
 </footer>
