--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./assets/riesling-webfont.css" type="text/css" charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="./assets/riesling-webfont.css"
+      type="text/css"
+      charset="utf-8"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap"
@@ -16,7 +21,9 @@
   <body onLoad="getImages();">
     <!-- Fullscreen SideNavbar (default: hidden) -->
     <div id="sideNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <div class="overlay-content">
         <a href="#">Travel</a>
         <a href="#">Style</a>
@@ -104,8 +111,8 @@
           <span class="category">Worldwide</span>
           <h3>Quisque velit nisi</h3>
           <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulum ante ip
+            Praesent sapien massa, convallis a pellentesque nec, egestas non
+            nisi. Nulla porttitor accumsan tincidunt. Vestibulum ante ip
           </p>
         </div>
       </article>
@@ -115,9 +122,9 @@
           <span class="category">Style</span>
           <h3>Quisque velit nisi</h3>
           <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-            posuere cubilia
+            Praesent sapien massa, convallis a pellentesque nec, egestas non
+            nisi. Nulla porttitor accumsan tincidunt. Vestibulum ante ipsum
+            primis in faucibus orci luctus et ultrices posuere cubilia
           </p>
         </div>
       </article>
@@ -127,8 +134,8 @@
           <span class="category">Style</span>
           <h3>Quisque velit nisi</h3>
           <p>
-            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
-            accumsan tincidunt. Vestibulu
+            Praesent sapien massa, convallis a pellentesque nec, egestas non
+            nisi. Nulla porttitor accumsan tincidunt. Vestibulu
           </p>
         </div>
       </article>
@@ -140,55 +147,68 @@
         <span class="author">by Jane Doe</span>
 
         <p>
-          Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a
-          enim in magna semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio nibh
-          euismod nulla, eget auctor orci nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit
-          amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
-          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue sed ut dui. Morbi
-          malesuada nulla nec purus convallis consequat. Vivamus id mollis quam. Morbi ac commodo
-          nulla. In condimentum orci id nisl volutpat bibendum. Quisque commodo hendrerit lorem quis
-          egestas. Maecenas quis tortor arcu.
+          Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat
+          dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque,
+          nunc ac egestas consequat, odio nibh euismod nulla, eget auctor orci
+          nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit amet nunc
+          gravida congue sed sit amet purus. Quisque lacus quam, egestas ac
+          tincidunt a, lacinia vel velit. Aenean facilisis nulla vitae urna
+          tincidunt congue sed ut dui. Morbi malesuada nulla nec purus convallis
+          consequat. Vivamus id mollis quam. Morbi ac commodo nulla. In
+          condimentum orci id nisl volutpat bibendum. Quisque commodo hendrerit
+          lorem quis egestas. Maecenas quis tortor arcu.
         </p>
         <p>
-          Sed porttitor lectus nibh. Curabitur aliquet quam id dui posuere blandit. Vestibulum ac
-          diam sit amet quam vehicula elementum sed sit amet dui. Lorem ipsum dolor sit amet,
-          consectetur adipiscing elit. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-          Vivamus suscipit tortor eget felis porttitor volutpat.
+          Sed porttitor lectus nibh. Curabitur aliquet quam id dui posuere
+          blandit. Vestibulum ac diam sit amet quam vehicula elementum sed sit
+          amet dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus
+          suscipit tortor eget felis porttitor volutpat.
         </p>
         <p>
-          Vivamus rutrum nunc non neque consectetur quis placerat neque lobortis. Nam vestibulum,
-          arcu sodales feugiat consectetur, nisl orci bibendum elit, eu euismod magna sapien ut
-          nibh. Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea
-          dictumst. Nam pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat
-          purus metus eu velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien.
-          Phasellus quis est sed turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu
-          eros interdum malesuada non vel leo. Sed fringilla porta ligula egestas tincidunt. Nullam
-          risus magna, ornare vitae varius eget, scelerisque a libero. Morbi eu porttitor ipsum.
-          Nullam lorem nisi, posuere quis volutpat eget, luctus nec massa. Pellentesque aliquam
-          lacinia tellus sit amet bibendum. Ut posuere justo in enim pretium scelerisque. Etiam
-          ornare vehicula euismod. Vestibulum at risus augue. Sed non semper dolor. Sed fringilla
-          consequat velit a porta. Pellentesque sed lectus pharetra ipsum ultricies commodo non sit
-          amet velit. Suspendisse volutpat lobortis ipsum, in scelerisque nisi iaculis a. Duis
-          pulvinar lacinia commodo. Integer in lorem id nibh luctus aliquam. Sed elementum, est ac
-          sagittis porttitor, neque metus ultricies ante, in accumsan.
+          Vivamus rutrum nunc non neque consectetur quis placerat neque
+          lobortis. Nam vestibulum, arcu sodales feugiat consectetur, nisl orci
+          bibendum elit, eu euismod magna sapien ut nibh. Donec semper quam
+          scelerisque tortor dictum gravida. In hac habitasse platea dictumst.
+          Nam pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu
+          consequat purus metus eu velit. Proin metus odio, aliquam eget
+          molestie nec, gravida ut sapien. Phasellus quis est sed turpis
+          sollicitudin venenatis sed eu odio. Praesent eget neque eu eros
+          interdum malesuada non vel leo. Sed fringilla porta ligula egestas
+          tincidunt. Nullam risus magna, ornare vitae varius eget, scelerisque a
+          libero. Morbi eu porttitor ipsum. Nullam lorem nisi, posuere quis
+          volutpat eget, luctus nec massa. Pellentesque aliquam lacinia tellus
+          sit amet bibendum. Ut posuere justo in enim pretium scelerisque. Etiam
+          ornare vehicula euismod. Vestibulum at risus augue. Sed non semper
+          dolor. Sed fringilla consequat velit a porta. Pellentesque sed lectus
+          pharetra ipsum ultricies commodo non sit amet velit. Suspendisse
+          volutpat lobortis ipsum, in scelerisque nisi iaculis a. Duis pulvinar
+          lacinia commodo. Integer in lorem id nibh luctus aliquam. Sed
+          elementum, est ac sagittis porttitor, neque metus ultricies ante, in
+          accumsan.
         </p>
         <p>
-          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac
-          egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per
-          conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.
-          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-          Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
-          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
-          condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac
-          euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.
-          Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec
-          viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in
-          magna semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio nibh euismod
-          nulla, eget auctor orci nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit amet
-          nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
-          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue sed ut dui. Morbi
-          malesuada nulla nec purus convallis consequat. Vivamus id mollis quam. Morbi ac commodo
-          nulla. In condimentum orci id nisl volutpat bibendum. Quisque commodo hendrerit lorem.
+          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus
+          ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti
+          sociosqu ad litora torquent per conubia nostra, per inceptos
+          himenaeos. Sed molestie augue sit amet leo consequat posuere.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et
+          magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
+          condimentum facilisis porta. Sed nec diam eu diam mattis viverra.
+          Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris,
+          quis sollicitudin sapien justo in libero. Vestibulum mollis mauris
+          enim. Morbi euismod magna ac lorem rutrum elementum. Donec viverra
+          auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi
+          a enim in magna semper bibendum. Etiam scelerisque, nunc ac egestas
+          consequat, odio nibh euismod nulla, eget auctor orci nibh vel nisi.
+          Aliquam erat volutpat. Mauris vel neque sit amet nunc gravida congue
+          sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
+          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue
+          sed ut dui. Morbi malesuada nulla nec purus convallis consequat.
+          Vivamus id mollis quam. Morbi ac commodo nulla. In condimentum orci id
+          nisl volutpat bibendum. Quisque commodo hendrerit lorem.
         </p>
       </article>
     </section>
@@ -201,10 +221,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Worldwide</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -215,10 +236,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Style</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -229,10 +251,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Worldwide</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -243,10 +266,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Style</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -257,10 +281,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Entertainment</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -271,10 +296,11 @@
           <h3>Lorem Ipsum</h3>
           <span class="category">Travel</span>
           <p>
-            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
+            orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci
+            tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor
+            dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
             mattis…
           </p>
         </div>
@@ -300,7 +326,7 @@
   </body>
   <script>
     const openNav = () => {
-      document.getElementById("sideNav").style.display = "block";
+      document.getElementById("sideNav").style.display = "flex";
     };
 
     const closeNav = () => {
