fixed top navigation bar

--- a/code/index.html
+++ b/code/index.html
@@ -29,17 +29,16 @@
     <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
-        <img class="img" src="./snake.jpg" alt="snake">
+        <img class="img" src="./gaming.jpg" alt="gaming control">
       </div>
       <div class="big-news-text">
-        <p>ANIMALS, 20 JAN 2021</p>
-        <h1>Top 10 Species Discovered in 2020 Include a Harry Potter Snake and Desert-Dwelling Broccoli</h1>
+        <p>ART & LEISURE, 20 JAN 2021</p>
+        <h1>Study During Lockdown Shows Video Gaming –Even For Hours– Can Help Your Mental Health</h1>
         <button class="button">READ MORE</button>
       </div>
     </section>
     <!-- smal news section -->
     <section class="smal-news-container">
-      <div>
         <div class="smal-news-heading">
           <h1>Recent news</h1>
         </div>
@@ -58,7 +57,7 @@
           <div class="news-card">
             <img class="img" src="./irland.jpg" alt="">
             <h2>This Could Be Your Dream Job: Thousands Apply to Be Caretakers on Remote Irish Island</h2>
-            <p>LEUSURE JAN 15 2021</p>
+            <p>ART & LEUSURE JAN 15 2021</p>
           </div>
           <div class="news-card">
             <img class="img" src="./turtle.jpg" alt="">
@@ -66,9 +65,7 @@
               Babies</h2>
             <p>ANIMALS, JAN 16 2021</p>
           </div>
-          
         </div>
-      </div>
     </section>
     <!-- smal news section -->
     <section class="smal-news-container">
@@ -79,8 +76,8 @@
         <div class="news-card-container">
           <div class="news-card">
             <img class="img" src="./car.jpg" alt="">
-            <h2>New Electric Car Batteries Can Fully-Charge in 5 Minutes, Like Filling Your Car With Gas, If Better Chargers Are in Place
-            </h2>
+            <h2>New Electric Car Batteries Can Fully-Charge in 5 Minutes, Like Filling Your Car With Gas, If Better
+              Chargers Are in Place</h2>
             <p>BUSINESS, JAN 10 2021</p>
           </div>
           <div class="news-card">
@@ -89,9 +86,9 @@
             <p>SCIENCE, JAN 11 2021</p>
           </div>
           <div class="news-card">
-            <img class="img" src="./gaming.jpg" alt="">
-            <h2>Study During Lockdown Shows Video Gaming –Even For Hours– Can Help Your Mental Health</h2>
-            <p>LEISURE, DEC 17 2020</p>
+            <img class="img" src="./snake.jpg" alt="">
+            <h2>Top 10 Species Discovered in 2020 Include a Harry Potter Snake and Desert-Dwelling Broccoli</h2>
+            <p>ANIMALS, DEC 17 2020</p>
           </div>
           <div class="news-card">
             <img class="img" src="./space.jpg" alt="">
