Implemented a hover effect on logo with video

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,8 @@
 
     <header>
         <div class="logo-container"> 
-        <img class="logo" src="Images/logo.png"/>
+        <!-- <img class="logo" src="Images/logo.png"/> -->
+        <h1 class="logo">GOOD <br>NEWS <br>ONLY</h1>
         <video class="logo-video" autoplay muted loop>
           <source src="Images/logo-film.mp4" type="video/mp4">
         </video>
