Started updating README file. Fixed indentation.

--- a/code/index.html
+++ b/code/index.html
@@ -16,24 +16,32 @@
           <div></div>
         </a>
       </div>
-        <img class="logo-1" src="./photos/dentnews.png" alt="Dentnews logo">
-        <nav class="navigation-container">
-          <div class="navigation-element-left"><a href="./article1.html">BREAKING NEWS</a></div>
-          <div class="navigation-element-left"><a href="./about.html">ABOUT US</a></div>
-          <img class="logo-2" src="./photos/dentnews.png" alt="Dentnews logo">
-          <div class="navigation-element-right"><a href="./subscribe.html">SUBSCRIBE</a></div>
-          <div class="navigation-element-right"><a href="./contact.html">CONTACT</a></div>
-        </nav>
+      <img class="logo-1" src="./photos/dentnews.png" alt="Dentnews logo">
+      <nav class="navigation-container">
+      <div class="navigation-element-left">
+        <a href="./article1.html">BREAKING NEWS</a>
+      </div>
+      <div class="navigation-element-left">
+        <a href="./about.html">ABOUT US</a>
+      </div>
+      <img class="logo-2" src="./photos/dentnews.png" alt="Dentnews logo">
+      <div class="navigation-element-right">
+        <a href="./subscribe.html">SUBSCRIBE</a>
+      </div>
+      <div class="navigation-element-right">
+        <a href="./contact.html">CONTACT</a>
+      </div>
+     </nav>
     </header>
 
     <section class="big-news">
         <a href="./article1.html"> 
            <img src="./photos/dentalvisit.jpg" alt="Picture of a man doing a dental check-up">
-          <div>
+           <div>
             <p><span class="breaking-news">BREAKING NEWS</span></p> 
             <h1>Dental clinics not affected by the new pandemic law.</h1>
             <p>What you need to know regarding the new law.</p>
-          </div>
+           </div>
         </a>
     </section>
 
