--- a/code/article1.html
+++ b/code/article1.html
@@ -19,7 +19,7 @@
                 <img src="./photos/dentalvisit.jpg" alt="Picture of a man undergoing a dental examination">
                 <div>
                     <p><span class="breaking-news">BREAKING NEWS</span></p>
-                    <h1>Dental clinics not affected by the new law.</h1>
+                    <h1>Dental clinics not affected by the new pandemic law.</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.
@@ -31,11 +31,10 @@
                 </div>
             </div>
         </article>
-
     </section>
 
-<footer>
-    <p>Dentnews AB 2021 &copy</p>
-</footer>
+    <footer>
+        <p>Dentnews AB 2021 &copy</p>
+    </footer>
 </body>
 </html>
