Styling of footer including links

--- a/code/index.html
+++ b/code/index.html
@@ -101,8 +101,13 @@
       </section>
     </div>
 <!-- FOOTER -->   
-    <footer>
-      <small>Copywrite 2020 Siri Hemsley</small>
+    <footer class="footer">
+      <div class="link-container">
+      <a class="footer-links" href="#">CONTACT</a>
+      <a class="footer-links" href="#">PRIVACY POLICY</a>
+      <a class="footer-links" href="#">CAREERS</a>
+    </div>
+    <small class="copywrite">&copy 2020 Siri Hemsley</small>
     </footer>
   </body>
 </html>
